Fixed right arrow showing when no scrollbar width, set static img height

--- a/src/components/Main/Movies/Movie/style.css
+++ b/src/components/Main/Movies/Movie/style.css
@@ -1,42 +1,33 @@
-#Main a {
-  text-decoration: none;
-  color: #333;
-}
-
-#Main li {
+#Movies li {
   color: #333;
   margin-right: 1rem;
-  height: 100%;
 }
 
-#Main li img {
-  height: 88%;
+#Movies li img {
+  height: 300px;
 }
 
-#Main li p {
+#Movies li p {
   margin: 0;
   font-weight: bold;
 }
 
-#Main li span {
+#Movies li span {
   font-weight: normal;
 }
 
 .pna {
-  height: 88%;
   position: relative;
   border: 1px solid #ddd;
 }
 .pna-img {
-  height: 100% !important;
   visibility: hidden;
 }
 .pna-content {
-  display: block;
-  text-align: center;
   position: absolute;
+  left: 0;
+  text-align: center;
   top: 50%;
   transform: translateY(-50%);
-  width: 100%;
   font-size: 2rem;
 }
